fixes on the way the specific sizing works on the grid to achieve expected behavior when you want the row to wrap with yt-row="wrap". also added in a toolbar.scss file and navigation components, so far just sidenav stuff

--- a/public/sass/globals/_base.scss
+++ b/public/sass/globals/_base.scss
@@ -21,6 +21,7 @@ body {
   font-family: $font-sans;
   line-height: 1.5rem;
   position: relative;
+  @include zIndex-5;
 }
 
 
